@@ -36,6 +36,20 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexableField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
@@ -67,6 +81,20 @@ operator|.
 name|common
 operator|.
 name|SolrInputDocument
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|SolrInputField
 import|;
 end_import
 
@@ -1409,6 +1437,183 @@ literal|0
 index|]
 argument_list|)
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiValuedFielAndDocBoosts
+specifier|public
+name|void
+name|testMultiValuedFielAndDocBoosts
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrCore
+name|core
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+decl_stmt|;
+name|IndexSchema
+name|schema
+init|=
+name|core
+operator|.
+name|getSchema
+argument_list|()
+decl_stmt|;
+name|SolrInputDocument
+name|doc
+init|=
+operator|new
+name|SolrInputDocument
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|setDocumentBoost
+argument_list|(
+literal|3.0f
+argument_list|)
+expr_stmt|;
+name|SolrInputField
+name|field
+init|=
+operator|new
+name|SolrInputField
+argument_list|(
+literal|"foo_t"
+argument_list|)
+decl_stmt|;
+name|field
+operator|.
+name|addValue
+argument_list|(
+literal|"summer time"
+argument_list|,
+literal|1.0f
+argument_list|)
+expr_stmt|;
+name|field
+operator|.
+name|addValue
+argument_list|(
+literal|"in the city"
+argument_list|,
+literal|5.0f
+argument_list|)
+expr_stmt|;
+comment|// using boost
+name|field
+operator|.
+name|addValue
+argument_list|(
+literal|"living is easy"
+argument_list|,
+literal|1.0f
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|put
+argument_list|(
+name|field
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|field
+argument_list|)
+expr_stmt|;
+name|Document
+name|out
+init|=
+name|DocumentBuilder
+operator|.
+name|toDocument
+argument_list|(
+name|doc
+argument_list|,
+name|core
+operator|.
+name|getSchema
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|IndexableField
+index|[]
+name|outF
+init|=
+name|out
+operator|.
+name|getFields
+argument_list|(
+name|field
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"wrong number of field values"
+argument_list|,
+literal|3
+argument_list|,
+name|outF
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+comment|// since Lucene no longer has native documnt boosts, we should find
+comment|// the doc boost multiplied into the boost o nthe first field value
+comment|// all other field values should be 1.0f
+comment|// (lucene will multiply all of the field boosts later)
+name|assertEquals
+argument_list|(
+literal|15.0f
+argument_list|,
+name|outF
+index|[
+literal|0
+index|]
+operator|.
+name|boost
+argument_list|()
+argument_list|,
+literal|0.0f
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1.0f
+argument_list|,
+name|outF
+index|[
+literal|1
+index|]
+operator|.
+name|boost
+argument_list|()
+argument_list|,
+literal|0.0f
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1.0f
+argument_list|,
+name|outF
+index|[
+literal|2
+index|]
+operator|.
+name|boost
+argument_list|()
+argument_list|,
+literal|0.0f
 argument_list|)
 expr_stmt|;
 block|}
